finish basic auth
