# api/routes/userRoute.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"ajher-server/api/controllers"
+	"ajher-server/api/middleware"
 	"ajher-server/internal/user"
 
 	"github.com/gin-gonic/gin"
@@ -20,5 +21,12 @@ func UserRoute(api *gin.RouterGroup, database *gorm.DB) {
 	// controllers
 	userHandler := controllers.NewUserHandler(userService)
 
+	// auth middleware
+	authMiddleware := middleware.NewAuthMiddleware(userService)
+
 	userRoute.POST("/register", userHandler.Register)
+	userRoute.POST("/login", userHandler.Login)
+	userRoute.GET("/profile", authMiddleware.AuthMiddleware, userHandler.GetProfile)
+	userRoute.GET("/validateToken", authMiddleware.AuthMiddleware, userHandler.ValidateToken)
+	userRoute.POST("/refreshToken", authMiddleware.RefreshTokenMiddleware, userHandler.RefreshToken)
 }
